# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
#

2004-11-29 20:17:08 GMT	John Goerzen <jgoerzen@complete.org>	patch-117

    Summary:
      Doc fixes
    Revision:
      missingh--head--0.5--patch-117


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser.hs
     libsrc/MissingH/ConfigParser/Types.hs


2004-11-29 20:00:23 GMT	John Goerzen <jgoerzen@complete.org>	patch-116

    Summary:
      Converted error types
    Revision:
      missingh--head--0.5--patch-116


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser.hs
     libsrc/MissingH/ConfigParser/Parser.hs
     libsrc/MissingH/ConfigParser/Types.hs


2004-11-29 18:47:31 GMT	John Goerzen <jgoerzen@complete.org>	patch-115

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-115


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser.hs
     libsrc/MissingH/ConfigParser/Parser.hs
     libsrc/MissingH/ConfigParser/Types.hs


2004-11-29 17:08:18 GMT	John Goerzen <jgoerzen@complete.org>	patch-114

    Summary:
      Checkpointing compile success with new error code
    Revision:
      missingh--head--0.5--patch-114


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser.hs
     libsrc/MissingH/ConfigParser/Types.hs


2004-11-29 16:55:59 GMT	John Goerzen <jgoerzen@complete.org>	patch-113

    Summary:
      Checkpointing switch to Either-based computing
    Revision:
      missingh--head--0.5--patch-113


    new files:
     libsrc/MissingH/Either.hs

    modified files:
     ChangeLog TODO libsrc/MissingH/ConfigParser.hs
     libsrc/MissingH/ConfigParser/Types.hs


2004-11-22 22:57:20 GMT	John Goerzen <jgoerzen@complete.org>	patch-112

    Summary:
      More CP tests
    Revision:
      missingh--head--0.5--patch-112


    modified files:
     ChangeLog TODO testsrc/ConfigParser/Maintest.hs

